crud supervisor
